* Add Brazillian Company Identifier as tax identifier
* Add Canadian Business Number as tax identifier
* Add Croatian Identification Number as tax identifier
* Replace co_rut for co_nit as tax identifier

Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add United Kingdom Unique Taxpayer Reference identifier
* Add Taiwanese Tax Number identifier
* Add Turkish tax identification number identifier
* Add El Salvador Tax Number identifier
* Add Singapore's Unique Entity Number identifier
* Add Montenegro Tax Number identifier
* Add Kenya Tax Number identifier

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Use usage from context for default contact mechanism on party

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Autocomplete party from European VAT number
* Use vat alias for party identifier
* Add Belgian BIS Number identifier
* Add Belgian National Number identifier
* Add Algerian Tax Number identifier
* Add Egyptian Tax Registration Number identifier
* Add European VAT on e-Commerce - One Stop Shop identifier
* Add Faroese Tax Number identifier
* Add Ghanaian Taxpayer Identification Number identifier
* Add Guinean Tax Number identifier
* Add Indian Voter ID identifier
* Add Indian VAT number identifier
* Add Moroccan Tax Number identifier
* Add Macedonian Tax Number identifier
* Add Pakistani Computerised National Identity Card Number identifier
* Add Portuguese Identity Number identifier
* Add Slovenian Corporate Registration Number identifier
* Add Slovenian Unique Master Citizen Number identifier
* Add Thai Memorandum of Association Number identifier
* Add Thai Personal Identification Number identifier
* Add Thai Taxpayer Identification Number identifier
* Add Tunisian Tax Number identifier

Version 6.8.0 - 2023-05-01
--------------------------