@@ -1,3 +1,4 @@
+* Notify for duplicate contact mechanism
 * Add Brazillian Company Identifier as tax identifier
 * Add Canadian Business Number as tax identifier
 * Add Croatian Identification Number as tax identifier
